<resources>
    <string name="app_name" translatable="false">PrimeiroProjeto</string>
    <string name="label_titulo">Calculator</string>
    <string name="label_peso">Your weigth</string>
    <string name="hint_peso">Example: 75.5</string>
    <string name="label_altura">Your heigth</string>
    <string name="hint_altura">Example: 1.71</string>
    <string name="botao_calcular">Calculate</string>
    <string name="botao_limpar">Clean</string>
    <string name="label_titulo_resultado">Your IMC is:</string>
    <string name="label_rodape">Developed by Carol</string>
    <string name="label_magreza">thinness</string>
    <string name="label_abaixo_peso">Under Weight</string>
    <string name="label_peso_ideal">Ideal Weight</string>
    <string name="label_levemente_acima">Slightly Overweight</string>
    <string name="label_obesidade1">Obesity 1</string>
    <string name="label_obesidade2">Obesity 2</string>
    <string name="label_obesidade3">Obesity 3</string>
</resources>
